--- a/public/manifest.json
+++ b/public/manifest.json
@@ -5,5 +5,12 @@
     "manifest_version": 2,
     "browser_action": {
         "default_popup": "index.html"
-    }
+    },
+  "content_scripts" : [
+      {
+        "matches": [ "<all_urls>" ],
+        "css": ["/static/css/app.css", "/static/css/content.css"],
+        "js": ["/static/js/0.chunk.js", "/static/js/content.js"]
+      }
+  ]
 }
