--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "webpack": "4.28.3",
     "webpack-dev-server": "3.1.14",
     "webpack-manifest-plugin": "2.0.4",
+    "whatwg-fetch": "^3.0.0",
     "workbox-webpack-plugin": "3.6.3",
     "xsd-schema-validator": "^0.6.0"
   },
